structure login creen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'ControleRoutier' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'ControleRoutierTests' do
     inherit! :complete
     # Pods for testing
