--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
+    "react-native-hr": "^1.1.4",
+    "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
