--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/base": "^4.0.0-rc.3",
+    "@rneui/themed": "^4.0.0-rc.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
+    "react-native-elements": "^3.4.2",
     "react-native-hr": "^1.1.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.2.5",
