--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/base": "^4.0.0-rc.3",
@@ -28,9 +30,11 @@
     "react-native-elements": "^3.4.2",
     "react-native-hr": "^1.1.4",
     "react-native-ionicons": "^4.6.5",
+    "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
+    "react-navigation-tabs": "^2.11.2",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
